PrintStreamMonitor, terminatePreviousLine, prepare version 0.4.0